--- a/flutter-webrtc-app/android/app/build.gradle
+++ b/flutter-webrtc-app/android/app/build.gradle
@@ -12,7 +12,7 @@ plugins {
 // }
 
 android {
-    namespace = "com.example.flutter_webrtc_app"
+    namespace = "com.maul.webrtc_example"
     compileSdk = 35
     ndkVersion = flutter.ndkVersion
 
@@ -50,7 +50,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.brnr.app"
+        applicationId = "com.maul.webrtc_example"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 24
