--- a/flutter-webrtc-app/android/app/src/main/AndroidManifest.xml
+++ b/flutter-webrtc-app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_webrtc_app">
+    package="com.maul.webrtc_example">
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
